# MUD-Space

./: CMakeLists.txt  MUD-Space.cpp  PLAN.md
.dev-partner/: PLAN.md
.dev-partner/findings/: 2026-03-16-asio-session-per-connection-pattern.md  2026-03-16-cmake-boost-asio-setup.md  2026-03-27-boost-asio-concurrency.md  2026-03-27-command-parsing-design.md  2026-03-27-session-management.md  2026-03-27-session-object-lifetime.md  2026-04-01-command-pattern-parsing.md  2026-04-01-tokenize-input-with-string-stream.md  2026-04-02-command-dispatch-pattern.md  2026-04-02-session-read-loop-integration.md  2026-04-05-redundant-return-removal.md  2026-04-05-session-class-command-handling.md  2026-04-08-explicit-null-check.md  2026-04-08-player-struct-integration.md  2026-04-12-command-pattern-implications.md  2026-04-12-room-data-structure-design.md  2026-04-22-init-vs-constructor.md  2026-04-22-session-player-room-coupling.md  2026-05-02-message-broadcast.md  2026-05-02-session-management.md  2026-05-07-command-parsing-enum.md  2026-05-11-command-pattern-for-mud-actions.md  2026-05-11-item-persistence.md  2026-05-16-persistence-manager-pattern.md  2026-05-16-world-persistence-design.md  2026-05-18-command-pattern-clarity.md
include/: CommandDispatcher.h  CommandParser.h  PersistenceManager.h  Session.h
src/: CommandDispatcher.cpp  CommandParser.cpp  Game.cpp  Game.h  Room.cpp  Room.h  Server.cpp  Server.h  Session.cpp  Session.h
